<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <me.magnum.melonds.ui.settings.preferences.InGameLockedListPreference android:entries="@array/video_renderer_options" android:title="@string/renderer" android:key="video_renderer" android:summary="%s" android:defaultValue="software" android:entryValues="@array/video_renderer_values" app:iconSpaceReserved="false"/>
    <me.magnum.melonds.ui.settings.preferences.InGameLockedSwitchPreference android:title="@string/video_vulkan_fastpath_enabled" android:key="video_vulkan_fastpath_enabled" android:summary="@string/video_vulkan_fastpath_enabled_summary" android:defaultValue="false" app:iconSpaceReserved="false"/>
    <me.magnum.melonds.ui.settings.preferences.InGameLockedListPreference android:entries="@array/video_internal_resolution_options" android:title="@string/internal_resolution" android:key="video_internal_resolution" android:summary="%s" android:defaultValue="1" android:entryValues="@array/video_internal_resolution_values" app:iconSpaceReserved="false"/>
    <SwitchPreference android:title="@string/threaded_rendering" android:key="enable_threaded_rendering" android:summary="@string/threaded_rendering_summary" android:defaultValue="true" app:iconSpaceReserved="false"/>
    <me.magnum.melonds.ui.settings.preferences.InGameLockedListPreference android:entries="@array/video_filtering_options" android:title="@string/filter" android:key="video_filtering" android:summary="%s" android:defaultValue="none" android:entryValues="@array/video_filtering_values" app:iconSpaceReserved="false"/>
    <Preference android:persistent="false" android:title="@string/video_retroarch_shader_source_title" android:key="video_retroarch_shader_source" app:iconSpaceReserved="false"/>
    <ListPreference android:title="@string/video_retroarch_shader_preset_title" android:key="video_retroarch_shader_preset" android:summary="@string/video_retroarch_shader_preset_summary" app:iconSpaceReserved="false"/>
    <PreferenceScreen android:persistent="false" android:layout="@layout/watermelon_preference" android:title="@string/video_retroarch_shader_settings_title" android:key="video_retroarch_shader_settings" android:summary="@string/video_retroarch_shader_settings_summary" app:iconSpaceReserved="false">
        <Preference android:persistent="false" android:title="@string/shader_compatibility_report_title" android:key="video_retroarch_shader_report" android:summary="@string/shader_compatibility_report_summary" app:iconSpaceReserved="false"/>
        <Preference android:persistent="false" android:title="@string/video_retroarch_shader_install_title" android:key="video_retroarch_shader_manage" android:summary="@string/video_retroarch_shader_install_summary" app:iconSpaceReserved="false"/>
        <me.magnum.melonds.ui.settings.preferences.StoragePickerPreference android:title="@string/video_retroarch_shader_root_title" android:key="video_retroarch_shader_root" android:summary="@string/video_retroarch_shader_root_summary" app:iconSpaceReserved="false" app:permissions="read" app:persistPermissions="true" app:type="radial"/>
        <EditTextPreference android:title="@string/video_retroarch_shader_parameters_title" android:key="video_retroarch_shader_parameters" android:summary="@string/video_retroarch_shader_parameters_summary" app:iconSpaceReserved="false"/>
        <SwitchPreference android:title="@string/video_retroarch_shader_clear_history_title" android:key="video_retroarch_shader_clear_history" android:summary="@string/video_retroarch_shader_clear_history_summary" android:defaultValue="false" app:iconSpaceReserved="false"/>
    </PreferenceScreen>
    <Preference android:title="@string/dual_screen_presets_settings_title" android:key="dual_screen_presets" app:iconSpaceReserved="false"/>
    <ListPreference android:entries="@array/external_display_mode_options" android:title="@string/external_display_mode" android:key="external_display_mode" android:summary="%s" android:defaultValue="melon_dual_ds" android:entryValues="@array/external_display_mode_values" app:iconSpaceReserved="false"/>
    <ListPreference android:entries="@array/fps_counter_position_options" android:title="@string/fps_counter_position" android:key="fps_counter_position" android:summary="%s" android:defaultValue="hidden" android:entryValues="@array/fps_counter_position_values" app:iconSpaceReserved="false"/>
    <ListPreference android:entries="@array/dsi_camera_source_options" android:title="@string/dsi_camera_source" android:key="dsi_camera_source" android:summary="%s" android:defaultValue="physical_cameras" android:entryValues="@array/dsi_camera_source_values" app:iconSpaceReserved="false"/>
    <me.magnum.melonds.ui.settings.preferences.StoragePickerPreference android:title="@string/dsi_camera_image" android:key="dsi_camera_static_image" android:dependency="dsi_camera_source" app:iconSpaceReserved="false" app:mimeType="image/jpeg|image/png" app:permissions="read" app:persistPermissions="true" app:type="linear"/>
    <PreferenceCategory android:title="@string/video_vulkan_driver_category" android:key="video_vulkan_driver_category" app:iconSpaceReserved="false">
        <ListPreference android:entries="@array/video_vulkan_driver_mode_options" android:title="@string/video_vulkan_driver_mode" android:key="video_vulkan_driver_mode" android:summary="%s" android:defaultValue="system" android:entryValues="@array/video_vulkan_driver_mode_values" app:iconSpaceReserved="false"/>
        <Preference android:title="@string/video_vulkan_driver_import" android:key="video_vulkan_driver_import" android:summary="@string/video_vulkan_driver_import_summary" app:iconSpaceReserved="false"/>
        <Preference android:title="@string/video_vulkan_driver_remove" android:key="video_vulkan_driver_remove" android:summary="@string/video_vulkan_driver_remove_summary" app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/video_hacks" android:key="video_hacks_category" app:iconSpaceReserved="false">
        <SwitchPreference android:title="@string/video_renderer_debug_tools_enabled" android:key="video_renderer_debug_tools_enabled" android:summary="@string/video_renderer_debug_tools_enabled_summary" android:defaultValue="false" app:iconSpaceReserved="false"/>
        <SwitchPreference android:title="@string/video_renderer_debug_bgobj_enabled" android:key="video_renderer_debug_bgobj_enabled" android:summary="@string/video_renderer_debug_bgobj_enabled_summary" android:dependency="video_renderer_debug_tools_enabled" android:defaultValue="false" app:iconSpaceReserved="false"/>
        <SwitchPreference android:title="@string/video_renderer_debug_latch_trace_enabled" android:key="video_renderer_debug_latch_trace_enabled" android:summary="@string/video_renderer_debug_latch_trace_enabled_summary" android:dependency="video_renderer_debug_tools_enabled" android:defaultValue="false" app:iconSpaceReserved="false"/>
        <SwitchPreference android:title="@string/conservative_coverage_enabled" android:key="video_conservative_coverage_enabled" android:summary="@string/conservative_coverage_enabled_summary" android:defaultValue="false" app:iconSpaceReserved="false"/>
        <SeekBarPreference android:max="200" android:title="@string/conservative_coverage_px" android:key="video_conservative_coverage_px" android:summary="@string/conservative_coverage_px_summary" android:dependency="video_conservative_coverage_enabled" android:defaultValue="150" app:iconSpaceReserved="false" app:min="0" app:showSeekBarValue="true"/>
        <SwitchPreference android:title="@string/conservative_coverage_apply_repeat" android:key="video_conservative_coverage_apply_repeat" android:summary="@string/conservative_coverage_apply_repeat_summary" android:dependency="video_conservative_coverage_enabled" android:defaultValue="true" app:iconSpaceReserved="false"/>
        <SwitchPreference android:title="@string/conservative_coverage_apply_clamp" android:key="video_conservative_coverage_apply_clamp" android:summary="@string/conservative_coverage_apply_clamp_summary" android:dependency="video_conservative_coverage_enabled" android:defaultValue="false" app:iconSpaceReserved="false"/>
        <SeekBarPreference android:max="2000" android:title="@string/conservative_coverage_depth_bias" android:key="video_conservative_coverage_depth_bias" android:summary="@string/conservative_coverage_depth_bias_summary" android:dependency="video_conservative_coverage_enabled" android:defaultValue="0" app:iconSpaceReserved="false" app:min="0" app:showSeekBarValue="true"/>
        <SwitchPreference android:title="@string/debug_3d_clear_magenta" android:key="video_debug_3d_clear_magenta" android:summary="@string/debug_3d_clear_magenta_summary" android:dependency="video_renderer_debug_tools_enabled" android:defaultValue="false" app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>
