<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference android:entries="@array/theme_options" android:title="@string/theme" android:key="theme" android:summary="%s" android:defaultValue="light" android:entryValues="@array/theme_values" app:iconSpaceReserved="false"/>
    <ListPreference android:entries="@array/fast_forward_speed_multiplier_options" android:title="@string/fast_forward_max_speed" android:key="fast_forward_speed_multiplier" android:summary="%s" android:defaultValue="-1" android:entryValues="@array/fast_forward_speed_multiplier_values" app:iconSpaceReserved="false"/>
    <ListPreference android:entries="@array/frame_limit_speed_multiplier_options" android:title="@string/frame_limit_speed" android:key="frame_limit_speed_multiplier" android:summary="%s" android:defaultValue="1" android:entryValues="@array/frame_limit_speed_multiplier_values" app:iconSpaceReserved="false"/>
    <com.smp.masterswitchpreference.MasterSwitchPreference android:title="@string/rewind" android:key="enable_rewind" android:defaultValue="false" android:fragment="me.magnum.melonds.ui.settings.fragments.RewindPreferencesFragment" app:iconSpaceReserved="false" app:ms_includedPrefScreen="xml/pref_rewind" app:ms_switchOffBackgroundColor="@android:color/transparent" app:ms_switchOffExplanationText="@string/rewind_description" app:ms_switchOffText="@string/off" app:ms_switchOnBackgroundColor="@android:color/transparent" app:ms_switchOnText="@string/on" app:ms_switchTextColor="@color/textColorPrimary" app:ms_switchThumbColor="?android:attr/colorAccent" app:ms_switchTrackColor="@color/prefSwitchRailColor"/>
    <SwitchPreference android:title="@string/sustained_performance_mode" android:key="enable_sustained_performance" android:summary="@string/sustained_performance_mode_summary" android:defaultValue="false" app:iconSpaceReserved="false"/>
    <Preference android:title="@string/backup_settings" android:key="backup_settings" app:iconSpaceReserved="false" app:isPreferenceVisible="@bool/settings_backup_restore_enabled"/>
    <Preference android:title="@string/restore_settings" android:key="restore_settings" app:iconSpaceReserved="false" app:isPreferenceVisible="@bool/settings_backup_restore_enabled"/>
</PreferenceScreen>
